# cookiecutter-action-py

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: automerge.yml  ci.yml  issue-manager.yml  labels.yml  poetry-upgrade.yml  pre-commit-autoupdate.yml  upgrader.yml
tests/: test_project.py
{{cookiecutter.hyphenated_name}}/: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg
{{cookiecutter.hyphenated_name}}/.github/workflows/: ci.yml  pre-commit-autoupdate.yml  semantic-release.yml  test.yml
{{cookiecutter.hyphenated_name}}/src/: app.py
