[tool.poetry]
name = "cookiecutter-action-py"
version = "0.1.0"
description = "A cookiecutter template for generating GitHub actions running Python"
authors = ["Bruno Alla <alla.brunoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
cookiecutter = "^2.1"
binaryornot = "^0.4.4"
pytest = "^7"
pytest-cookies = "^0.6.0"

[tool.isort]
profile = "black"
known_first_party = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
