[tool.poetry]
name = "{{ cookiecutter.name }}"
version = "1.0.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "MIT"
readme = "README.md"
keywords = ["github", "actions", "python"]
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated_name }}"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.8"
environs = "^9.2.0"
PyGithub = "^1.53"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^6.0"
isort = "^5.6"
pyupgrade = "^3.0"

[tool.semantic_release]
branch = "main"
version_variable = [
    "src/__init__.py:__version__",
    "pyproject.toml:version",
]
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = false

[tool.isort]
profile = "black"
known_first_party = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
